# Vangers

./: .clang-format  .dockerignore  .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  INSTALL  README.md  appveyor.yml  multiplayer-desync-investigation-2026-05-17.md  multiplayer-netid-architecture-notes.md  multiplayer-network-refactor-plan.md  vangers.rc  vangers.res
Vangers.app/: installscript_osx.vdf
lib/renderer/: CMakeLists.txt
lib/renderer/src/renderer/: ResourceId.h  ResourceStorage.h  common.cpp  common.h  exception.h  vectormath.cpp  vectormath.h
lib/renderer/src/renderer/compositor/: AbstractCompositor.h  CompositorException.cpp  CompositorException.h
lib/renderer/src/renderer/visualbackend/: AbstractVisualBackend.cpp  AbstractVisualBackend.h  VisualBackendContext.cpp  VisualBackendContext.h
lib/utils/: CMakeLists.txt  backtrace.c  tga2vbmp.sh  vss-noop.cpp  zip_convert.cpp
lib/utils/xzip/: inzip.cpp  outzip.cpp  treezip.cpp  xzip.h
lib/vgl/: CMakeLists.txt  IVertexArray.cpp  IVertexArray.h  base.h  buffer.h  camera.cpp  camera.h  itexture.h  ivertexarray.cpp  ivertexarray.h  pipeline.cpp  pipeline.h  shader.cpp  shader.h  texture.h  texture_ext.cpp  texture_ext.h  uniform.h  uniform_attrib.h  uniform_ext.cpp  uniform_ext.h  util.cpp  util.h  vec.cpp  vec.h  vertex_array.h  vertexarray_ext.cpp  vertexarray_ext.h
lib/xgraph/: CMakeLists.txt  Makefile  config.h  gl.cpp  gl.h  global.h  xbmp.cpp  xbmp.h  xfont.cpp  xgraph.cpp  xgraph.h  xgraph_dummy.cpp  xpng.cpp  xpng.h  xside.cpp  xside.h
lib/xgraph/gl/: Camera.cpp  Camera.h  PlainTextureShader.cpp  PlainTextureShader.h  Shader.cpp  Shader.h  SmartShader.cpp  SmartShader.h  Texture.cpp  Texture.h  common.cpp  common.h
lib/xsound/: CMakeLists.txt  _xsound.h  avi.cpp  avi.h  ogg_stream.cpp  ogg_stream.h  xcritical.h  xsound.cpp
lib/xtool/: CMakeLists.txt  lang.cpp  lang.h  port.cpp  port.h  xbuffer.h  xcpuid.h  xerrhand.h  xerrhead.cpp  xglobal.h  xmsgbuf.h  xrec.h  xstream.h  xt_list.h  xtcore.cpp  xtcore.h  xutl.h  xzip.h  zip_resource.h
lib/xtool/iniparser/: dictionary.c  dictionary.h  iniparser.c  iniparser.h
lib/xtool/xbuffer/: xbcnvin.cpp  xbcnvout.cpp  xbcore.cpp  xbsearch.cpp
lib/xtool/xkey/: xnames.cpp
lib/xtool/xmath/: xmath.cpp  xmath.h
lib/xtool/xmsgbuffer/: xmsgbuf.cpp
lib/xtool/xrecorder/: xrec.cpp
lib/xtool/xresource/: zip_headers.h  zip_resource.cpp
lib/xtool/xstream/: xscnvin.cpp  xscnvout.cpp  xscore.cpp  xsenlv.cpp  xsgetlin.cpp  xsinput.cpp  xsoutput.cpp  xsrdwr.cpp  xsserv.cpp  xstime.cpp
lib/xtool/xutil/: xclock.cpp
server/: .env.example  CMakeLists.txt  Dockerfile  docker-cmd.sh  docker-compose.yml  kdsplus.cpp  kdsplus.h  multiplayer.h  server.cpp  server.h  vss-noop.cpp  win32f.cpp  xsocket.cpp  xsocket.h
src/: .directory  CMakeLists.txt  ai.cpp  ai.h  backg.cpp  backg.h  cli_options.cpp  cli_options.h  common.h  file_utils.h  global.h  lang.cpp  lang.h  multiplayer.h  network.cpp  network.h  palette.cpp  palette.h  rle.cpp  rle.h  road.cpp  runtime.h  sqexp.h  xcontainers.h  xgamepad.cpp  xgamepad.h  xjoystick.cpp  xjoystick.h  xsocket.cpp  xsocket.h  zmod_client.cpp  zmod_client.h  zmod_common.h
src/3d/: 3d_math.cpp  3d_math.h  3dgraph.cpp  3dgraph.h  3dobject.cpp  3dobject.h  dynamics.cpp  general.h  heap.h  optimize.cpp  parser.h  traction_control.h
src/actint/: a_consts.h  aci_evnt.h  aci_scr.cpp  aci_scr.h  aci_str.h  acsconst.h  actint.cpp  actint.h  actintml.cpp  ascr_fnc.cpp  ascript.cpp  chtree.cpp  chtree.h  credits.h  item_api.h  layout.h  mlconsts.h  mlstruct.h  sscript.cpp
src/dast/: poly3d.cpp  poly3d.h
src/iscreen/: controls.cpp  controls.h  ext_evnt.h  hfont.cpp  hfont.h  i_chat.cpp  i_chat.h  i_mem.h  i_str.h  iextern.cpp  ikeys.cpp  ikeys.h  imap_fnc.cpp  iml.cpp  iml.h  iscr_fnc.cpp  iscreen.cpp  iscreen.h  iscreen_options.h  iscript.cpp  iscript.h  ivmap.cpp  ivmap.h  iworld.h  s_mem.h  script.cpp  script_compiler.cpp  script_compiler.h  settings_adapter.cpp  settings_adapter.h  smooth.cpp  zip.h
src/particle/: bmp2scr.cpp  deform.cpp  deform.h  df.cpp  df.h  light.cpp  light.h  particle.cpp  particle.h  partmap.cpp  partmap.h  pmaptype.cpp
src/settings/: gamepad_mapping.cpp  gamepad_mapping.h  input_binding.cpp  input_binding.h  legacy_settings_import.cpp  legacy_settings_import.h  settings.cpp  settings.h  settings_io.cpp  text_encoding.cpp  text_encoding.h
src/sound/: hmusic.h  hsound.h  music.cpp  sound.cpp
src/terra/: compress.cpp  cpuid.h  huff1.cpp  huff1.h  land.cpp  perpslop.cpp  render.h  siderend.cpp  slopskip.cpp  splay.cpp  splay.h  vmap.cpp  vmap.h  vmaprenderer.cpp  vmaprenderer.h  world.h
src/text/: font_manager.cpp  font_manager.h  language_policy.cpp  language_policy.h  legacy_codec.cpp  legacy_codec.h  legacy_ttf_draw.cpp  legacy_ttf_draw.h  locale_catalog.cpp  locale_catalog.h  ttf_runtime.cpp  ttf_runtime.h  unicode.cpp  unicode.h
src/units/: compas.h  effect.cpp  effect.h  hobj.cpp  hobj.h  items.cpp  items.h  magnum.h  mechos.cpp  mechos.h  moveland.cpp  moveland.h  sensor.cpp  sensor.h  track.cpp  track.h  uvsapi.h
src/util/: PerfWidget.cpp  PerfWidget.h  Timer.cpp  Timer.h  TimerStorage.cpp  TimerStorage.h  ring_buffer.h
src/uvs/: diagen.cpp  diagen.h  screen.cpp  screen.h  univang.cpp  univang.h
src/vangers/: README.md  event.h  sys.cpp  sys.h
src/video/: winvideo.h
src/vss/: README.md  event.h  quant-names.h  sys-bridge.cpp  sys-bridge.h  sys-experimental.cpp  sys-modules.cpp  sys-modules.h  sys-noop.cpp  sys-quant.cpp  sys.cpp  sys.h
surmap/: 3d_shape.cpp  3d_shape.h  CMakeLists.txt  README.md  dsidernd.cpp  impass.cpp  impass.h  missed.cpp  missed.h  runtime.h  siderend.cpp  sqexp.cpp  sqexp.h  sqibody.cpp  sqicore.cpp  sqimenu.cpp  sqint.h  surmap.cpp  tools.cpp  tools.h  track.cpp  track.h  world.cpp
tests/: CMakeLists.txt  legacy_data_compat_test.cpp  legacy_settings_migration_test.cpp  network_control_flags_test.cpp  sdl_event_buffer_test.cpp  settings_test.cpp  text_encoding_test.cpp  traction_control_cadence_test.cpp  xsocket_test.cpp
(+354 files in other folders)
